k8s/prod/ingress-prod.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bo-sellcoda
  namespace: production-bo-sellcoda
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    nginx.org/proxy-connect-timeout: "900s"
    nginx.org/proxy-read-timeout: "900s"
    nginx.org/proxy-send-timeout: "900s"
spec:
  tls:
    - hosts:
      - bo-sellcoda.iconkaset.com
      secretName: bo-sellcoda-prod-cert
  rules:
    - host: bo-sellcoda.iconkaset.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bo-sellcoda
                port:
                  name: bosellcoda
